Not kafka and docker
